# brewdiff

./: Cargo.toml  README.md  brewdiff-crate-design.md
.github/workflows/: release.yml
examples/: basic.rs
src/: diff.rs  display.rs  error.rs  intent.rs  lib.rs  state.rs
