[package]
name = "brewdiff"
version = "0.1.0"
edition = "2021"
authors = ["Kilian Koeltzsch"]
description = "Homebrew diff functionality for nix-darwin configurations"
license = "MIT"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
owo-colors = "4.0"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"
