[package]
name = "brewdiff"
version = "0.1.0"
readme = "README.md"
edition = "2021"
authors = ["Kilian Koeltzsch"]
description = "Homebrew diff functionality for nix-darwin configurations"
license = "MIT"
homepage = "https://github.com/kiliankoe/brewdiff"
repository = "https://github.com/kiliankoe/brewdiff"
keywords = ["nix", "nix-darwin", "homebrew", "macOS"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
owo-colors = "4.0"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"
